--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -6,10 +6,10 @@
     android:layout_height="wrap_content"
     android:background="#F0F0F0"
     android:orientation="vertical"
-    tools:context=".DrinksActivity">
+    tools:context=".OrderActivity">
 
     <Button
-        android:id="@+id/btn_order"
+        android:id="@+id/btn_pay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,11 +17,21 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         android:padding="10dp"
-        android:text="My Orders" />
-    
+        android:text="Pay Now" />
+
+    <TextView
+        android:id="@+id/tv_grand_total"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sample Grand Total"
+        android:textColor="@color/colorPrimary"
+        android:layout_margin="10dp"
+        android:textSize="18sp"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_drinks"
+        android:id="@+id/rv_orders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
