--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="#F0F0F0"
     android:orientation="vertical"
-    tools:context=".DrinksActivity">
-
+    tools:context=".PaymentActivity">
     <Button
-        android:id="@+id/btn_order"
+        android:id="@+id/btn_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,11 +16,27 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         android:padding="10dp"
-        android:text="My Orders" />
-    
+        android:text="Main Menu" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Your Order is Complete. Thank You!"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginBottom="10dp"
+        android:textSize="18sp"/>
+    <TextView
+        android:id="@+id/tv_grand_total"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sample Grand Total"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_drinks"
+        android:id="@+id/rv_orders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
+
 </LinearLayout>
