--- a/app/src/main/res/layout/activity_drinks.xml
+++ b/app/src/main/res/layout/activity_drinks.xml
@@ -17,6 +17,8 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
         android:padding="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
         android:text="My Orders" />
     
     <androidx.recyclerview.widget.RecyclerView
