--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -15,6 +15,8 @@
         android:textSize="18sp"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="#FFFFFF"
         android:padding="10dp"
         android:text="Main Menu" />
     <TextView
